[gd_scene load_steps=8 format=2]

[ext_resource path="res://Gate.gd" type="Script" id=1]
[ext_resource path="res://Gate_New.png" type="Texture" id=2]
[ext_resource path="res://FountainBlood_New.png" type="Texture" id=3]
[ext_resource path="res://Body.png" type="Texture" id=4]
[ext_resource path="res://GateLock_new.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 27.4311

[sub_resource type="CircleShape2D" id=2]
radius = 23.4594

[node name="Gate" type="Node2D"]
position = Vector2( -0.263519, 0 )
z_index = -1
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.587425, -67.4243 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="Sprite"]
self_modulate = Color( 0.752941, 0, 1, 1 )
position = Vector2( 2.37721, -2.99988 )
rotation = 9.47714
scale = Vector2( 0.8, 0.8 )
z_index = -1
texture = ExtResource( 3 )

[node name="Sprite4" type="Sprite" parent="Sprite"]
self_modulate = Color( 0.752941, 0, 1, 1 )
position = Vector2( 2.37721, -2.99988 )
scale = Vector2( 0.8, 0.8 )
z_index = -1
texture = ExtResource( 3 )

[node name="Gate" type="Area2D" parent="."]
position = Vector2( -45.2947, -0.32354 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gate"]
position = Vector2( 45.9672, -65.6989 )
shape = SubResource( 1 )

[node name="SuckSprite" type="TextureProgress" parent="."]
margin_left = -13.1815
margin_top = -12.1937
margin_right = 242.819
margin_bottom = 243.806
rect_scale = Vector2( 0.1, 0.1 )
max_value = 1.0
step = 0.001
value = 0.5
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 4 )
fill_mode = 3
tint_under = Color( 0.145098, 0.00784314, 0.00784314, 1 )
tint_progress = Color( 0.662745, 0.0588235, 0.0588235, 1 )

[node name="SuckPlace" type="Area2D" parent="."]
position = Vector2( 0.705322, 4.67646 )
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SuckPlace"]
position = Vector2( -1.5778, -4.10226 )
shape = SubResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -2.20467, -0.32354 )
scale = Vector2( 0.33, 0.33 )
texture = ExtResource( 5 )

[node name="Center" type="Node2D" parent="."]
position = Vector2( 1.07614, -67.8921 )

[connection signal="mouse_entered" from="SuckPlace" to="." method="_on_SuckPlace_mouse_entered"]
[connection signal="mouse_exited" from="SuckPlace" to="." method="_on_SuckPlace_mouse_exited"]
